# atuin-z

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  db.rs  exclusions.rs  frecency.rs  main.rs  matching.rs  shell.rs
src/shell/: bash.sh  fish.fish
